[gd_scene load_steps=13 format=2]

[ext_resource path="res://kenney_fontpackage/Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/2.png" type="Texture" id=2]
[ext_resource path="res://uipack_fixed/PNG/blue_button02.png" type="Texture" id=3]
[ext_resource path="res://LevelPick.gd" type="Script" id=4]
[ext_resource path="res://Sounds/2019-01-02_-_8_Bit_Menu_-_David_Renda_-_FesliyanStudios.com.mp3" type="AudioStream" id=5]
[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/1.png" type="Texture" id=6]
[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/4.png" type="Texture" id=7]
[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/3.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 57
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 57
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="LevelPick" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 81.0
margin_right = 237.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Pick A Level"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 33.0
margin_top = 63.0
margin_right = 114.0
margin_bottom = 144.0
focus_neighbour_left = NodePath("../Button3")
focus_neighbour_right = NodePath(".")

[node name="BlueButton02" type="Sprite" parent="Button"]
position = Vector2( 40.5, 40.5 )
scale = Vector2( 0.426316, 1.65306 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Button"]
margin_left = 2.0
margin_top = -2.0
margin_right = 83.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1

[node name="Button2" type="Button" parent="."]
margin_left = 123.0
margin_top = 63.0
margin_right = 204.0
margin_bottom = 144.0

[node name="BlueButton03" type="Sprite" parent="Button2"]
position = Vector2( 40.5, 40.5 )
scale = Vector2( 0.426316, 1.65306 )
texture = ExtResource( 3 )

[node name="Label2" type="Label" parent="Button2"]
margin_left = 3.0
margin_top = -3.0
margin_right = 84.0
margin_bottom = 69.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "2"
align = 1
valign = 1

[node name="Button3" type="Button" parent="."]
margin_left = 213.0
margin_top = 63.0
margin_right = 294.0
margin_bottom = 144.0

[node name="BlueButton04" type="Sprite" parent="Button3"]
position = Vector2( 40.5, 40.5 )
scale = Vector2( 0.426316, 1.65306 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Button3"]
margin_left = 2.0
margin_top = -3.0
margin_right = 83.0
margin_bottom = 69.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "3"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.137
autoplay = true

[node name="ParalaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParalaxBackground"]
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParalaxBackground/ParallaxLayer"]
position = Vector2( 162, 90 )
scale = Vector2( 0.5625, 0.555556 )
texture = ExtResource( 6 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParalaxBackground"]
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParalaxBackground/ParallaxLayer2"]
position = Vector2( 162, 90 )
scale = Vector2( 0.5625, 0.555556 )
texture = ExtResource( 2 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParalaxBackground"]
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParalaxBackground/ParallaxLayer3"]
position = Vector2( 162, 90 )
scale = Vector2( 0.5625, 0.555556 )
texture = ExtResource( 8 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParalaxBackground"]
motion_mirroring = Vector2( 1440, 0 )

[node name="Sprite" type="Sprite" parent="ParalaxBackground/ParallaxLayer4"]
position = Vector2( 164.25, 90 )
scale = Vector2( 0.554687, 0.555556 )
texture = ExtResource( 7 )

[node name="Button4" type="Button" parent="."]
margin_left = 253.0
margin_top = 156.0
margin_right = 316.0
margin_bottom = 176.0
flat = true

[node name="BlueButton05" type="Sprite" parent="Button4"]
position = Vector2( 31.5, 11 )
scale = Vector2( 0.331579, 0.367347 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="Button4"]
margin_top = -1.0
margin_right = 63.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 1
valign = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
